--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
+	<classpathentry kind="src" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -22,5 +22,27 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.5.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-2.27.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-core-js-2.27.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-driver-2.29.0.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="lib/httpmime-4.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/jsoup-1.11.2.jar"/>
+	<classpathentry kind="lib" path="lib/neko-htmlunit-2.27.jar"/>
+	<classpathentry kind="lib" path="lib/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/xalan.jar"/>
+	<classpathentry kind="lib" path="lib/cssparser-0.9.23.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-api-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-client-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-common-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-9.4.5.v20170502.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.5.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.8.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
