--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ gen### Java template
 .mtj.tmp/
 
 # Package Files #
-*.jar
+# *.jar
 !src/main/resources/mysql-connector-java-5.1.34.jar
 *.war
 *.ear
